samples/_failures_safe/1761144032_5c9f24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16c21195.c: In function ‘main’:
./samples/SAFE/__tmp_16c21195.c:173:5: error: expected identifier or ‘(’ at end of input
  173 |     int
      |     ^~~
./samples/SAFE/__tmp_16c21195.c:173:5: error: expected declaration or statement at end of input
